Fix spacing issue in navbar.

--- a/less/modules/navbar.less
+++ b/less/modules/navbar.less
@@ -255,14 +255,14 @@
             border-bottom-color: mix(@firm, black, 85%);
             border-left: none;
             color: @inverse;
-            padding-left: @navbar-link-space + 2;
+            padding-left: @navbar-link-space;
             .box-shadow(none);
           }
         }
         & + li {
           > a {
             border-left: none;
-            padding-left: @navbar-link-space + 2;
+            padding-left: @navbar-link-space;
           }
         }
       }
